try to make a build with a name (wip)

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 ---
 applications:
--  command: bundle exec unicorn -p $PORT -c ./config/unicorn.rb
+-  name: ccapi-staging
+   command: bundle exec unicorn -p $PORT -c ./config/unicorn.rb
    memory: 1G
    services:
    - bservice
